
2008-10-16 - Release Version: 0.2.b.6

  - (Issue 37) Display file and line information for each log message
  - (Issue 51) Limit output of object graphs
  - Bugfix for encoding object members set to NULL|false|''

2008-10-14 - Release Version: 0.2.b.5

  - Updated JsonStream wildfire protocol to be more robust
  - (Issue 33) PHP error notices running demos
  - (Issue 48) Warning: ReflectionProperty::getValue() expects exactly 1 parameter, 0 given

2008-10-08 - Release Version: 0.2.b.4

	- Bugfix for logging objects with recursion

2008-10-08 - Release Version: 0.2.b.3

  - (Issue 43) Notice message in 0.2b2
  - Added support for PHP's native json_encode() if available
  - Revised object encoder to detect object recursion

2008-10-07 - Release Version: 0.2.b.2

  - (Issue 28) Need solution for logging private and protected object variables
  - Added trace() and table() aliases in FirePHP class
  - (Issue 41) Use PHP doc in FirePHP
  - (Issue 39) Static logging method for object oriented API

2008-10-01 - Release Version: 0.2.b.1

  - Added support for error and exception handling
  - Updated min PHP version for PEAR package to 5.2
  - Added version constant for library
  - Gave server library it's own wildfire plugin namespace
  - Migrated communication protocol to Wildfire JsonStream
  - Added support for console groups using "group" and "groupEnd"
  - Added support for log, info, warn and error logging aliases
  - (Issue 29) problem with TRACE when using with error_handler
  - (Issue 33) PHP error notices running demos
  - (Issue 12) undefined index php notice
  - Removed closing ?> php tags
  - (Issue 13) the code in the fb() function has a second return statement that will never be reached

2008-07-30 - Release Version: 0.1.1.3

	- Include __className property in JSON string if variable was an object
	- Bugfix - Mis-spelt "Exception" in JSON encoding code

2008-06-13 - Release Version: 0.1.1.1

	- Bugfix - Standardize windows paths in stack traces